--- a/portfolio/src/components/Home.css
+++ b/portfolio/src/components/Home.css
@@ -1,16 +1,21 @@
+@import url('https://fonts.googleapis.com/css2?family=Assistant:wght@500&display=swap');
 
-  @import url('https://fonts.googleapis.com/css2?family=Assistant:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Assistant:wght@500&family=Raleway:wght@500&display=swap');
 
-  @import url('https://fonts.googleapis.com/css2?family=Assistant:wght@500&family=Raleway:wght@500&display=swap');
+.backhome {
+	background: url('../images/bfg6.gif');
 
-
-
-h1 {
-	display: flex
+	background-size: cover;
+	background-position: center;
+	background-repeat: no-repeat;
 }
 
-.lista{
-	margin-left: 10px
+h1 {
+	display: flex;
+}
+
+.lista {
+	margin-left: 10px;
 }
 
 .container {
@@ -18,57 +23,85 @@ h1 {
 	flex-direction: column;
 	align-items: start;
 	padding-top: 60px;
-
-font-family: 'Raleway', sans-serif;
+	font-family: 'Raleway', sans-serif;
 }
-.item{
+
+.item {
 	position: absolute;
-	animation:roll 8s ease 1s infinite backwards
+	animation: roll 8s ease 1s infinite backwards;
 }
-.item:nth-child(1){
+.item:nth-child(1) {
 	animation-delay: 0s;
-	opacity: 0
+	opacity: 0;
 }
-.item:nth-child(2){
+.item:nth-child(2) {
 	animation-delay: 2s;
-	opacity: 0
+	opacity: 0;
 }
-.item:nth-child(3){
-	animation-delay:4s;
-	opacity: 0
+.item:nth-child(3) {
+	animation-delay: 4s;
+	opacity: 0;
 }
-.item:nth-child(4){
+.item:nth-child(4) {
 	animation-delay: 6s;
-	opacity: 0
-}
-
-@keyframes roll{
-0%{  
 	opacity: 0;
-	transform: translate3d(0,-70%,0)
-}
-2.5%, 25%{
-	opacity: 1;
-	transform: translateZ(0)
-}
-27.5%, 100%{
-	opacity: 0;
-	transform: translate(0,70%,0)
 }
 
+@keyframes roll {
+	0% {
+		opacity: 0;
+		transform: translate3d(0, -70%, 0);
+	}
+	2.5%,
+	25% {
+		opacity: 1;
+		transform: translateZ(0);
+	}
+	27.5%,
+	100% {
+		opacity: 0;
+		transform: translate(0, 70%, 0);
+	}
+}
+.cointainer2 {
+	display: block;
+	text-align: center;
+	position: absolute;
 }
 
-.press{
-	
-font-family: 'Raleway', sans-serif;
+.press {
+	font-family: 'Raleway', sans-serif;
+	overflow: hidden;
+	width: 90%;
 }
-.press:hover {-webkit-transform:scale(1.1);transform:scale(1.1); transition:2s}
-
-
-.foto{
-
-	filter: opacity(.5);
-
+.press:hover {
+	-webkit-transform: scale(1.1);
+	transform: scale(1.1);
+	transition: 2s;
 }
 
+.fotoh {
+	filter: grayscale(1);
+	display: flex;
+	flex-direction: column;
+	align-items: start;
+}
 
+.fotoh:hover {
+	-webkit-transform: scale(1.1);
+	transform: scale(1.1);
+	transition: 2s;
+	filter: grayscale(0);
+}
+
+@keyframes cursor {
+	50% {
+		border-color: transparent;
+	}
+}
+
+@keyframes typing {
+	from {
+		width: 0;
+	}
+}
